# it-center-fyn

./: .env.example  README.md  main_example.py  pyproject.toml  rag_examples.ipynb  requirements.txt
datasets/: teknologier.json
